--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
+		 Core theme CSS (includes Bootstrap)--
+        <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css"> 
+        <link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css">
+		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
+		
 		<link href="./CSS/HTML5style2.css" rel="stylesheet">
 		<link rel="stylesheet" href="./CSS/HTML5style2.css" type="text/css" media="screen" charset="utf-8" />
         <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8" />
