--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css">
 		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
 		
-		<link href="./CSS/HTML5style2.css" rel="stylesheet">
+		<link href="../orris0/CSS/HTML5style2.css" rel="stylesheet">
 		<link rel="stylesheet" href="./CSS/HTML5style2.css" type="text/css" media="screen" charset="utf-8" />
         <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8" />
 		<!-- Core theme CSS (includes Bootstrap)-->
