--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         --
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css"> -->
         <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="../orris0/js/script.js"></script>  
         <!--
         The following 2 meta tags *must* come first in the <head> to consistently ensure proper document rendering. Any other head element should come *after* these tags.
         -->
