--- a/index.html
+++ b/index.html
@@ -18,21 +18,12 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		 Core theme CSS (includes Bootstrap)--
+		 
         <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css"> 
-        <!-- <link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css"> --
-		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css"> -->
-		
-		<link href="../orris0/CSS/HTML5style2.css" rel="stylesheet">
 		<link rel="stylesheet" href="../orris0/CSS/HTML5style2.css" type="text/css" media="screen" charset="utf-8" />
         <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8" />
 		<!-- Core theme CSS (includes Bootstrap)-->
-		<!-- Optional Metadata --
-        <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> --
-		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/HTML5-style-2.css"> --
-		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/flexboxgrid.css"> --
-        <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
-       -->
+		<!-- Optional Metadata -->
         <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
         <!-- Name of web application (only should be used if the website is used as an app) -->
         <meta name="application-name" content="Practical HTML5 projects">
