--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
+		<link rel="apple-touch-icon" href="graphics/icon.png">
+	    <meta name="apple-mobile-web-app-capable" content="yes">
 		
          <!-- code.jquery.com/mobile-->
 		<!--Allows control over where resources are loaded from.
