--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
+        <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8" />
+  
+  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="./js/script.js"></script>
 		<link rel="apple-touch-icon" href="graphics/icon.png">
 	    <meta name="apple-mobile-web-app-capable" content="yes">
 		
@@ -23,7 +28,7 @@
 		 
         <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css"> 
 		<link rel="stylesheet" href="../orris0/CSS/HTML5style2.css" type="text/css" media="screen" charset="utf-8" />
-        <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8" />
+        <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8" />
 		<!-- Core theme CSS (includes Bootstrap)-->
 		<!-- Optional Metadata -->
         <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
