--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
         <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
-  <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="./lightbox.css" type="text/css" media="screen" charset="utf-8" />
   
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./js/script.js"></script>
