--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
         <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
-  <link rel="stylesheet" href="./lightbox.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/" type="text/css" media="screen" charset="utf-8" />
   
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./js/script.js"></script>
-		<link rel="apple-touch-icon" href="graphics/icon.png">
+		<link rel="apple-touch-icon" href=".graphics/icon.png">
 	    <meta name="apple-mobile-web-app-capable" content="yes">
 		
          <!-- code.jquery.com/mobile-->
