--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		 
         <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css"> 
-		<link rel="stylesheet" href="../orris0/CSS/HTML5style2.css" type="text/css" media="screen" charset="utf-8" />
-        <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8" />
-		<!-- Core theme CSS (includes Bootstrap)-->
+		<link rel="stylesheet" href="../orris0/CSS/HTML5style2.css" type="text/css" media="screen" charset="utf-8">
+        <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css" media="screen" charset="utf-8">
+		<link rel="stylesheet" href="colorbox.css" type="text/css" media="screen" charset="utf-8">
+	
+  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
+        <!-- Core theme CSS (includes Bootstrap)-->
 		<!-- Optional Metadata -->
         <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
         <!-- Name of web application (only should be used if the website is used as an app) -->
