--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 		
 		<div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
             <div class="col-12">
-                <img src="img/paper.png">
+                <img src="img/paper.png" width="95%">
             </div>
         </div>
         <br class="clear">
