--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                                 <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                 <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                                 <li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
-                                <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
+                                <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                 <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                              </ul><!--end of menu list-->
                         </nav>
