--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		 
-        <link rel="stylesheet" type="text/css" href="../orris0/CSS/nav-style.css"> 
+		  
 		<link rel="stylesheet" href="../orris0/CSS/HTML5style2.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css" media="screen" charset="utf-8">
 		<link rel="stylesheet" href="colorbox.css" type="text/css" media="screen" charset="utf-8">
+
+        <link rel="stylesheet" type="text/css" href="../orris0/CSS/nav-style.css">
+        <link rel="stylesheet" type="text/css" href="../orris0/CSS/starter-page-style-2.css">
 	
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
