--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		  
-		<link rel="stylesheet" href="../orris0/CSS/HTML5style2.css" type="text/css" media="screen" charset="utf-8">
+		<link rel="stylesheet" href="../orris0/CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css" media="screen" charset="utf-8">
 		<link rel="stylesheet" href="colorbox.css" type="text/css" media="screen" charset="utf-8">
 
