--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css" media="screen" charset="utf-8">
 		<link rel="stylesheet" href="colorbox.css" type="text/css" media="screen" charset="utf-8">
 
-        <link rel="stylesheet" type="text/css" href="../orris0/CSS/nav-style.css">
+        <!-- <link rel="stylesheet" type="text/css" href="../orris0/CSS/nav-style.css"> -->
         <!-- <link rel="stylesheet" type="text/css" href="../orris0/CSS/starter-page-style-2.css"> -->
 	
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
