--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         
         <!-- <link rel="stylesheet" type="text/css" href="../orris0/CSS/nav-style.css"> -->
         <!-- <link rel="stylesheet" type="text/css" href="../orris0/CSS/starter-page-style-2.css"> -->
+
+		<link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery1-col.css">
 	
         <!-- Core theme CSS (includes Bootstrap)-->
 		<!-- Optional Metadata -->
