--- a/index.html
+++ b/index.html
@@ -397,6 +397,20 @@
                     </ul><br class="clear">
                 </div><!--gallery block closed-->
             </div><!--midcol closed-->
+		
+		    <div class="row" style="background-color: #f6931e;">
+                <div class="col-11">
+                    <h2>Get ready for take off.</h2>                                             
+				</div><!-- end col-12 -->
+            </div> <!-- end class row -->
+
+		    <div class="row" style="background-color: #1abc9c;">
+                <div class="col-11">
+                    <div class="col-3">
+                        <img id="orange-globe" class="circle" src="images/orange-globe.png">
+                    </div> <!-- end col-3 -->
+                </div><!-- end col-11 -->
+            </div> <!-- end class row -->
 			<footer> 
                  <div class="footer-nav">
                                 <ul>
@@ -423,21 +437,21 @@
                 <a href=" #" class="drinkaware">Live Life Sensibly</a>
             </div> 
             </footer> 
-			<div class="row" style="background-color: #f6931e;">
+			<!-- <div class="row" style="background-color: #f6931e;">
                 <div class="col-11">
                     <h2>Get ready for take off.</h2>                                             
-				</div><!-- end col-12 -->
-            </div> <!-- end class row -->
+				</div><!-- end col-12 --
+            </div> <!-- end class row --
 	
             <div class="row" style="background-color: #1abc9c;">
                 <div class="col-11">
                     <div class="col-3">
                         <img id="orange-globe" class="circle" src="images/orange-globe.png">
-                    </div> <!-- end col-3 -->
-                </div><!-- end col-11 -->
+                    </div> <!-- end col-3 --
+                </div><!-- end col-11 --
             </div> <!-- end class row -->
             
-            <!-- </div> -- END SHOWCASE --
+            <!-- </div> -- END SHOWCASE -->
             <div class="features">
                         <div class="row" style="background-color: #1abc9c;">
                             <div class="col-10">
