--- a/index.html
+++ b/index.html
@@ -165,10 +165,11 @@
                 </div> 
 				<!-- end col-12 -->            
             </div> 
-			<br class="clear">
 			<!-- end row -->
+			<br class="clear">
+			
 			<div class="data" id="html5style2content">
-		        <div class="row">
+				<div class="row">
                     <div class="col-12">
                         <img id="kite" src="img/kite.png";>
 						<!-- <div id="container">
@@ -277,14 +278,11 @@
       <p id="fine_print">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.    
       </p>
-    </div>
-
-    <div id="footer">
-      <p>
-        &copy; Copyright 2010 CelebriTracker Productions
-      </p>
-    </div>
-  </div>
+                    </div>
+                    <div id="footer">
+                        <p>&copy; Copyright 2010 CelebriTracker Productions</p>
+                    </div>
+                </div>
 					    <!--close top section - content area starts -->
 				    </div> <!-- end col-12 -->
                 </div> <!-- end row -->
