--- a/index[1].html
+++ b/index[1].html
@@ -11,11 +11,13 @@
   <link rel="stylesheet" href="css/font-awesome.min.css"/>
 </head>
 <body>
-
-
-
-
-
+<div class="wrapper">
+	<div class="row" id="header">
+	
+	</div><!-- end-header -->
+	
+</div><!-- end-wrapper -->
+	
 </body>
 </html>
 
