--- a/index[1].html
+++ b/index[1].html
@@ -13,7 +13,9 @@
 <body>
 <div class="wrapper">
 	<div class="row" id="header">
-	
+		<div class="col-12">
+			<img class="logo" src="img/flexy-logo.png">
+		</div>
 	</div><!-- end-header -->
 	
 </div><!-- end-wrapper -->
