--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         </h2> -->
                         <div id="navigation">
                             <ul>
-                                <li><a href="#">Home</a></li>
+                                <li><a href="index[1].html">Home</a></li>
                                 <li><a href="#">Buy Now!</a></li>
                                 <li><a href="#">About Us</a></li>
                                 <li><a href="#">Gift Ideas</a></li>
