--- a/index[1].html
+++ b/index[1].html
@@ -15,8 +15,25 @@
 	<div class="row" id="header">
 		<div class="col-12">
 			<img class="logo" src="img/flexy-logo.png">
-		</div>
+		</div><!-- end-row -->
 	</div><!-- end-header -->
+
+	<div class="row">
+		<div class="col-12">
+			<nav role="navigation" id="nav">
+				<input class="trigger" type="checkbox" id="mainNavButton">
+				<label for="mainNavButton" onclick>Menu</label>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About Us</a></li>
+					<li><a href="#">Products</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Specials</a></li>
+					<li><a href="#">Contact</a></li>
+					
+				</ul>
+		</div><!-- end-row -->
+	</div><!-- end-header --
 	
 </div><!-- end-wrapper -->
 	
