--- a/index[1].html
+++ b/index[1].html
@@ -33,7 +33,11 @@
 					
 				</ul>
 		</div><!-- end-row -->
-	</div><!-- end-header --
+	</div><!-- end-header -->
+	<div class="row">
+		<div class="çol-12">
+	    </div><!-- end-col-12 -->
+	</div><!-- end-row -->
 	
 </div><!-- end-wrapper -->
 	
