--- a/index[1].html
+++ b/index[1].html
@@ -36,13 +36,13 @@
 	</div><!-- end-header -->
 	<div class="row">
 		<div class="çol-12">
-			<img id="kite" src="img/kite.png";>
+			<img src="img/kite.png";>
 	    </div><!-- end-col-12 -->
 	</div><!-- end-row -->
 
 	<div class="row">
-		<div class="çol-12">
-			<img id="paper" src="img/paper.png";>
+		<div class="çol-12" padding="2%">
+			<img src="img/paper.png";>
 	    </div><!-- end-col-12 -->
 	</div><!-- end-row -->
 	
