--- a/index[1].html
+++ b/index[1].html
@@ -42,7 +42,7 @@
 
 	<div class="row">
 		<div class="çol-12" padding="2%">
-			<img src="img/paper.png";>
+			<h2 class="dark";>
 	    </div><!-- end-col-12 -->
 	</div><!-- end-row -->
 	
