--- a/index[1].html
+++ b/index[1].html
@@ -46,7 +46,7 @@
 	    </div><!-- end-col-12 -->
 	</div><!-- end-row -->
 
-	<div class="row">
+	<div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
 		<div class="çol-12">
 			<img src="img/paper.png";>
 	    </div><!-- end-col-12 -->
