--- a/index[1].html
+++ b/index[1].html
@@ -51,6 +51,20 @@
 			<img src="img/paper.png";>
 	    </div><!-- end-col-12 -->
 	</div><!-- end-row -->
+
+	<div class="row" style="background-color: #f6931e;">
+        <div class="col-11">
+            <h2>Get ready for take off.</h2>                                             
+		</div><!-- end col-12 -->
+    </div> <!-- end class row -->
+
+	<div class="row" style="background-color: #1abc9c;">
+        <div class="col-11">
+            <div class="col-3">
+                <img class="circle" src="img/orange-globe.png">
+            </div> <!-- end col-3 -->
+        </div><!-- end col-11 -->
+    </div> <!-- end class row -->
 	
 </div><!-- end-wrapper -->
 	
