--- a/index[1].html
+++ b/index[1].html
@@ -15,7 +15,7 @@
 	<div class="row" id="header">
 		<div class="col-12">
 			<img class="logo" src="img/flexy-logo.png">
-		</div><!-- end-row -->
+		</div><!-- end-col-12 -->
 	</div><!-- end-header -->
 
 	<div class="row">
@@ -32,7 +32,7 @@
 					<li><a href="#">Contact</a></li>
 					
 				</ul>
-		</div><!-- end-row -->
+		</div><!-- col-12 -->
 	</div><!-- end-header -->
 	<div class="row">
 		<div class="çol-12">
@@ -55,7 +55,7 @@
 	<div class="row" style="background-color: #f6931e;">
         <div class="col-11">
             <h2>Get ready for take off.</h2>                                             
-		</div><!-- end col-12 -->
+		</div><!-- end col-11 -->
     </div> <!-- end class row -->
 
 	<div class="row" style="background-color: #1abc9c;">
