--- a/index[1].html
+++ b/index[1].html
@@ -65,7 +65,37 @@
             </div> <!-- end col-3 -->
         </div><!-- end col-11 -->
     </div> <!-- end class row -->
-	
+	<!-- </div> -- END SHOWCASE -->
+    <!-- <div class="features"> -->
+    <div class="row" style="background-color: #1abc9c;">
+        <div class="col-10">
+            <h2>We're flying around the globe</h2>
+        </div>
+        <div class="col-3">
+            <img id="waves" class="circle" src="images/waves.png">
+        </div>
+    </div>
+    <!-- </div> -->
+    <!-- <div class="item3"> -->
+    <div class="row" style="background-color: #e5ef3f;">
+        <div class="col-9">
+            <h2>Above the clouds &amp; over the sea.</h2>
+        </div>
+        <div class="col-3">
+            <img id="plane" class="circle" src="images/plane.png">
+        </div>
+    </div>
+    <!-- </div> --
+                    <div class="item4"> -->
+    <div class="row" style="background-color: #34495e;">
+        <div class="col-8">
+            <h2>In just 42 hours and 27 minutes</h2>
+        </div>
+        <div class="col-3">
+            <img id="paper-blue" class="circle" src="images/paper-blue.png">
+        </div>
+    </div>
+                    <!-- </div> -->
 </div><!-- end-wrapper -->
 	
 </body>
