--- a/index[1].html
+++ b/index[1].html
@@ -48,7 +48,7 @@
 
 	<div class="row">
 		<div class="çol-12" padding="2%">
-			<h2 class="dark">Welcome to Flexy</h2>;>
+			<h2 class="dark">Welcome to Flexy</h2>
 	    </div><!-- end-col-12 -->
 	</div><!-- end-row -->
 
