--- a/index[1].html
+++ b/index[1].html
@@ -98,6 +98,46 @@
             <img id="paper-blue" class="circle" src="images/paper-blue.png">
         </div>
     </div>
+	 <div class="row" style="background-color: #00afe1;">
+            <div class="col-7">
+            <h2>So come along for the ride!</h2>
+        </div>
+        <div class="col-3">
+            <img id="globe" class="circle" src="images/globe.png" width="215px">
+        </div>
+    </div>
+                    
+    <div class="row">
+        <div class="col-12" style="background-color: 66d4ff;">
+            <img id="plane-background" src="./img/plane-background.png" width="935px">
+        </div>
+    </div>
+    <div class="row" style="background-color: 66d4ff">
+        <div class="col-12">
+            <h2>Follow Us</h2>
+        </div>
+	</div>
+	<div class="row" style="background-color: 66d4ff">
+		<div class="col-12">
+			
+			<ul class="social">
+                <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
+				<li><a href="#"><i class="fa fa-google-plus"></i></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></i></a></li>
+                <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
+                <li><a href="#"><i class="instagram"></i></i></a></li>
+            </ul>
+			
+        </div>
+    </div>
+
+    <div class="col-12">
+		
+        <footer class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
+            <p>&copy; Kite-It.</p>
+        </footer>
+		
+    </div>
                     
 </div><!-- end-wrapper -->
 	
