--- a/index[1].html
+++ b/index[1].html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <title>Flexy Responsive Flexbox Grid Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="./style[1].css">
+  <link rel="stylesheet" href="./nav[1].css">
   <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css"/>
+  <link rel="stylesheet" href="./font-awesome.min[1].css"/>
 </head>
 	
 <body>
