--- a/index[1].html
+++ b/index[1].html
@@ -20,6 +20,7 @@
 			<img class="logo" src="img/flexy-logo.png">
 		</div><!-- end-col-12 -->
 	</div><!-- end-header -->
+	<br class="clear">
 	
 	<div id="content">
         <h2>Award winning accommodation, self catering or bed and breakfast</h2>
@@ -27,6 +28,7 @@
             <h3>Cottages, converted barns, caravans</h3>
 			<img alt="Cottage interior" title="Cottage interior" height="225" src="images/cotdining300.jpg" width="300"><br>The superb interior of one of our cottages
         </div>
+		<br class="clear">
 
         <nav><!--use the semantic tag <nav>-->
             <ul><!--start of menu list-->
@@ -38,13 +40,15 @@
                 <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
             </ul><!--end of menu list-->
         </nav><!--remove </div> and replace with </nav>-->
+		<br class="clear">
             
         <div id="midcol">
             <h3>Situated in the UK's beautiful Devon countryside</h3>
             <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
-        </div>
-        <br class="clear">
+        </div><!-- end-mid-col -->
+        
     </div><!--content section closed-->
+	<br class="clear">
 
 	<div class="row">
 		<div class="col-12">
@@ -64,6 +68,7 @@
 			</nav>
 		</div><!-- col-12 -->
 	</div><!-- end-row -->
+	<br class="clear">
 	
 	<div class="row">
 		<div class="çol-12">
@@ -76,12 +81,14 @@
 			<h2 class="dark">Welcome to Flexy</h2>
 	    </div><!-- end-col-12 -->
 	</div><!-- end-row -->
+	<br class="clear">
 
 	<div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
 		<div class="çol-12">
 			<img src="img/paper.png";>
 	    </div><!-- end-col-12 -->
 	</div><!-- end-row -->
+	<br class="clear">
 
 	<div class="row" style="background-color: #f6931e;">
         <div class="col-11">
