--- a/index[1].html
+++ b/index[1].html
@@ -15,7 +15,7 @@
 	
 <div class="wrapper">
 	
-	<div class="row" id="header">
+	<div class="row" id="header#html5-style-2header">
 		<div class="col-12">
 			<img class="logo" src="img/flexy-logo.png">
 		</div><!-- end-col-12 -->
