--- a/index[1].html
+++ b/index[1].html
@@ -22,7 +22,7 @@
 	</div><!-- end-header -->
 	<br class="clear">
 	
-	<div id="content">
+	<div id="html5-style-2content">
         <h2>Award winning accommodation, self catering or bed and breakfast</h2>
         <div id="leftcol">
             <h3>Cottages, converted barns, caravans</h3>
@@ -42,7 +42,7 @@
         </nav><!--remove </div> and replace with </nav>-->
 		<br class="clear">
             
-        <div id="midcol">
+        <div id="html5-style-2midcol">
             <h3>Situated in the UK's beautiful Devon countryside</h3>
             <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
         </div><!-- end-mid-col -->
@@ -53,7 +53,7 @@
 	<div class="row">
 		<div class="col-12">
 			
-			<nav role="navigation" id="nav">
+			<nav role="navigation" id="nav#html5-style-2nav">
 				<input class="trigger" type="checkbox" id="mainNavButton">
 				<label for="mainNavButton" onclick>Menu</label>
 				<ul>
