--- a/index[1].html
+++ b/index[1].html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <title>Flexy Responsive Flexbox Grid Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8"/>        
+  <link rel="stylesheet" href="colorbox.css" type="text/css" media="screen" charset="utf-8"/>
+
+  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="script.js"></script>
+
+
   <link rel="stylesheet" href="./style[1].css">
   <link rel="stylesheet" href="./nav[1].css">
   <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
