--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </head>
 	<!--
 	<body>
-	
+<a href="../../images/johnny_400.jpg" class="lightbox">pic</a>
 <div class="wrapper">
 	
 	<div class="row" id="header">
