--- a/index[1].html
+++ b/index[1].html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8"/>        
-  <link rel="stylesheet" href="colorbox.css" type="text/css" media="screen" charset="utf-8"/>
+  <link rel="stylesheet" href="../jQuery-novice-to-ninja/chapter_04/02_colorbox_plugin/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
 
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
