--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="css/nav.css">
+		<link rel="stylesheet" href="./CSS/style.css">
+        <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/css/nav.css">
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="css/font-awesome.min.css"/>
