--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="./style[1].css">
-        <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/css/nav.css">
+        <link rel="stylesheet" href="./nav[1].css">
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./font-awesome.min[1].css">
