--- a/index.html
+++ b/index.html
@@ -339,6 +339,8 @@
                                 <li><a href="#">Gift Ideas</a></li>
                             </ul>
                         </div>
+                    </div><!-- end-col-12 -->
+                </div><!-- end-row -->
                         <p id="intro">
                             Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!    
                         </p>
@@ -429,7 +431,7 @@
       <p id="fine_print">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.    
       </p>
-                    </div>
+                    
                     <!--
                     <div id="footer">
                         <p>&copy; Copyright 2010 CelebriTracker Productions</p>
