--- a/index[1].html
+++ b/index[1].html
@@ -31,7 +31,7 @@
 	</div><!-- end-header -->
 	<br class="clear">
 	
-	<div id="html5-style-2content">
+	<div id="html5style2content">
         <h2>Award winning accommodation, self catering or bed and breakfast</h2>
         <div id="leftcol">
             <h3>Cottages, converted barns, caravans</h3>
@@ -39,7 +39,7 @@
         </div>
 		<br class="clear">
 
-        <nav><!--use the semantic tag <nav>-->
+        <nav#html5style2nav><!--use the semantic tag <nav>-->
             <ul><!--start of menu list-->
                 <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                 <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
@@ -51,7 +51,7 @@
         </nav><!--remove </div> and replace with </nav>-->
 		<br class="clear">
             
-        <div id="html5-style-2midcol">
+        <div id="html5style2midcol">
             <h3>Situated in the UK's beautiful Devon countryside</h3>
             <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
         </div><!-- end-mid-col -->
@@ -62,7 +62,7 @@
 	<div class="row">
 		<div class="col-12">
 			
-			<nav role="navigation" id="nav#html5-style-2nav">
+			<nav role="navigation" id="nav#html5style2nav">
 				<input class="trigger" type="checkbox" id="mainNavButton">
 				<label for="mainNavButton" onclick>Menu</label>
 				<ul>
