--- a/index[1].html
+++ b/index[1].html
@@ -10,7 +10,7 @@
 
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="../orris0/scripts.js"></script>
 
 
   <link rel="stylesheet" href="./style[1].css">
