--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
-		<link rel="icon" type="image/png" href="./flexy-logo.png" />
+		
         <title>Gallery-page-Templates</title>
         
+        <link rel="icon" type="image/png" href="./flexy-logo.png" >
         <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8" />
         <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css" media="screen" charset="utf-8" />
   		
