--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head profile="http://www.w3.org/2005/10/profile">
 		
         <title>Gallery-page-Templates</title>
-        
+
         <link rel="icon" type="image/png" href="./flexy-logo.png" >
         <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8" />
         <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css" media="screen" charset="utf-8" />
@@ -307,7 +307,7 @@
 
     <body>
         <div class="wrapper">
-            <a href="../../images/johnny_400.jpg" class="lightbox">pic</a>
+            <a href="../orris0/gran-parents.jpg" class="lightbox">pic</a>
             <div class="row">
                 <div class="col-12">
 					
