--- a/index[1].html
+++ b/index[1].html
@@ -180,7 +180,7 @@
 		</div><!-- end-col-12 -->
 	</div><!-- end-header -->
 	<br class="clear">
-	
+	<!--
 	<div id="html5style2content">
         <h2>Award winning accommodation, self catering or bed and breakfast</h2>
         <div id="leftcol">
@@ -189,7 +189,7 @@
         </div>
 		<br class="clear">
 
-        <nav#html5style2nav><!--use the semantic tag <nav>-->
+        <nav#html5style2nav><!--use the semantic tag <nav>--
             <ul><!--start of menu list-->
                 <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                 <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
@@ -197,18 +197,18 @@
                 <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
                 <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
                 <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
-            </ul><!--end of menu list-->
-        </nav><!--remove </div> and replace with </nav>-->
+            </ul><!--end of menu list--
+        </nav><!--remove </div> and replace with </nav>--
 		<br class="clear">
             
-        <div id="html5style2midcol">
+        <div id="html5style2midcol"
             <h3>Situated in the UK's beautiful Devon countryside</h3>
             <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
-        </div><!-- end-mid-col -->
+        </div><!-- end-mid-col --
         
-    </div><!--content section closed-->
+    </div><!--content section closed--
 	<br class="clear">
-
+-->
 	<div class="row">
 		<div class="col-12">
 			
