--- a/index[1].html
+++ b/index[1].html
@@ -184,7 +184,7 @@
 	    <div class="row">
 		<div class="col-12">
 			
-			<nav role="navigation" id="#html5style2nav">
+			<nav role="navigation" id="nav">
 				<input class="trigger" type="checkbox" id="mainNavButton">
 				<label for="mainNavButton" onclick>Menu</label>
 				<ul>
