--- a/index[1].html
+++ b/index[1].html
@@ -160,12 +160,12 @@
 				    <input class="trigger" type="checkbox" id="mainNavButton">
 				    <label for="mainNavButton" onclick>Menu</label>
 				    <ul>
-					    <li><a href="#">Home</a></li>
-					    <li><a href="#">About Us</a></li>
-					    <li><a href="#">Products</a></li>
-					    <li><a href="#">Blog</a></li>
-					    <li><a href="#">Specials</a></li>
-					    <li><a href="#">Contact</a></li>					
+					    <li><a href="./index.html">Home</a></li>
+					    <li><a href="./index[1].html">About Us</a></li>
+					    <li><a href="./membership.html">Products</a></li>
+					    <li><a href="./news.html">Blog</a></li>
+					    <li><a href="./starter-page.html">Specials</a></li>
+					    <li><a href="./welcome.html">Contact</a></li>					
 				    </ul>
 			    </nav>
 		    </div><!-- col-12 -->
