--- a/index[1].html
+++ b/index[1].html
@@ -177,20 +177,20 @@
 			<img src="img/kite.png";>
 
             <div id="content">
-      <h2>
-        Welcome!
-      </h2>
-      <div id="navigation">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Buy Now!</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Gift Ideas</a></li>
-        </ul>
-      </div>
-      <p id="intro">
-        Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
-      </p>
+                <h2>Welcome!</h2>
+                <div id="navigation">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Buy Now!</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Gift Ideas</a></li>
+                    </ul>
+                </div>
+                <!--
+                <p id="intro">
+                    Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
+                </p>
+            -->
       <p id="no-script">
         We recommend that you have JavaScript enabled!
       </p>
@@ -294,6 +294,10 @@
 	    <div class="row">
 		<div class="çol-12" padding="2%">
 			<h2 class="dark">Welcome to Flexy</h2>
+
+            <p id="intro">
+                    Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
+                </p>
 	    </div><!-- end-col-12 -->
 	    </div><!-- end-row -->
 	    <br class="clear">
