--- a/index[1].html
+++ b/index[1].html
@@ -197,7 +197,7 @@
                     <p id="disclaimer">
                     Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like people so their privacy should be respected.
                     </p>
-                    -->
+                    
       <div id="news">
         <h2>Latest News</h2>
         <p>
@@ -206,6 +206,7 @@
         </p>
         <p>Who lost their recording contract today? <span class="spoiler">The Zaxntines!</span></p>
       </div>
+    -->
       <div>
         <h2 class="heading">Our Celebrities</h2>
         <p class="info">
@@ -318,11 +319,18 @@
 	    <br class="clear">
 
 	    <div class="row" style="background-color: #f6931e;">
-        <div class="col-11">
-            <h2>Get ready for take off.</h2>                                             
-		</div><!-- end col-11 -->
-
-
+            <div class="col-11">
+                <h2>Get ready for take off.</h2>
+            
+                <div id="news">
+                    <h2>Latest News</h2>
+                    <p>
+                        Which member of the seminal calypso/lectro band <em>C&amp;C Music Sweatshop</em> was spotted last night at <em>Dirt</em>, the trendy New York restaurant that serves only food caught and retrieved by the chef's own hands?
+                        <span class="spoiler">Yes! It's the ever-effervescent, <em>Glendatronix</em>!</span>
+                    </p>
+                    <p>Who lost their recording contract today? <span class="spoiler">The Zaxntines!</span></p>
+                </div>
+		    </div><!-- end col-11 -->
         </div> <!-- end class row -->
 
 	    <div class="row" style="background-color: #1abc9c;">
