--- a/index[1].html
+++ b/index[1].html
@@ -391,6 +391,12 @@
 
 	    <div class="row" style="background-color: 66d4ff">
 		    <div class="col-12">
+           <div id="footer">
+               <p>
+                   &copy; Copyright 2010 CelebriTracker Productions
+                </p>
+            </div>
+        </div>
 			
 			    <ul class="social">
                     <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
