--- a/index[1].html
+++ b/index[1].html
@@ -166,8 +166,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073"
-        crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
     <!--Add conditional Javascript-->
     <!--[if lte IE 8]>
                 <script src="js/html5.js" type="text/javascript"></script>
@@ -387,6 +386,7 @@
   <div class="row" style="background-color: #1abc9c;">
     <div class="col-10">
       <h2>We're flying around the globe</h2>
+      
     </div>
     <div class="col-3">
       <img id="waves" class="circle" src="images/waves.png">
