--- a/index[1].html
+++ b/index[1].html
@@ -171,41 +171,38 @@
     <!--[if lte IE 8]>
                 <script src="js/html5.js" type="text/javascript"></script>
             <![endif]-->
-</head>
+    </head>
+    <body>
+        <div class="wrapper">
 
-<body>
+            <div class="row" id="header#html5style2header">
+                <div class="col-12">
+                    <img class="logo" src="img/flexy-logo.png">
+                </div><!-- end-col-12 -->
+            </div><!-- end-header -->
+            <br class="clear">
 
-  <div class="wrapper">
+            <div class="row">
+                <div class="col-12">
+                    <nav role="navigation" id="nav">
+                        <input class="trigger" type="checkbox" id="mainNavButton">
+                        <label for="mainNavButton" onclick>Menu</label>
+                        <ul>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./index[1].html">About Us</a></li>
+                            <li><a href="./membership.html">Products</a></li>
+                            <li><a href="./news.html">Blog</a></li>
+                            <li><a href="./starter-page.html">Specials</a></li>
+                            <li><a href="./welcome.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div><!-- col-12 -->
+            </div><!-- end-row -->
+            <br class="clear">
 
-    <div class="row" id="header#html5style2header">
-      <div class="col-12">
-        <img class="logo" src="img/flexy-logo.png">
-      </div><!-- end-col-12 -->
-    </div><!-- end-header -->
-    <br class="clear">
-
-    <div class="row">
-      <div class="col-12">
-
-        <nav role="navigation" id="nav">
-          <input class="trigger" type="checkbox" id="mainNavButton">
-          <label for="mainNavButton" onclick>Menu</label>
-          <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./index[1].html">About Us</a></li>
-            <li><a href="./membership.html">Products</a></li>
-            <li><a href="./news.html">Blog</a></li>
-            <li><a href="./starter-page.html">Specials</a></li>
-            <li><a href="./welcome.html">Contact</a></li>
-          </ul>
-        </nav>
-      </div><!-- col-12 -->
-    </div><!-- end-row -->
-    <br class="clear">
-
-    <div class="row">
-      <div class="çol-12">
-        <img src="img/kite.png" ;>
+            <div class="row">
+                <div class="çol-12">
+                    <img src="img/kite.png" ;>
 
         <div id="content">
           <h2>Welcome!</h2>
@@ -237,7 +234,7 @@
         </p>
         <p>Who lost their recording contract today? <span class="spoiler">The Zaxntines!</span></p>
       </div>
-    -->
+    --
           <div>
             <h2 class="heading">Our Celebrities</h2>
             <p class="info">
@@ -300,7 +297,7 @@
               </tbody>
             </table>
           </div>
-
+            -->
           <div id="comment">
             <h2>Leave a comment</h2>
             name:<br />
@@ -319,15 +316,9 @@
           </p>
 
         </div>
-
-        <div id="footer">
-          <p>
-            &copy; Copyright 2010 CelebriTracker Productions
-          </p>
-        </div>
       </div>
     </div><!-- end-col-12 -->
-  </div><!-- end-row -->
+ 
 
   <div class="row">
     <div class="çol-12" padding="2%">
@@ -376,13 +367,75 @@
 
   <div class="row" style="background-color: #1abc9c;">
     <div class="col-11">
+		<div>
+            <h2 class="heading">Our Celebrities</h2>
+            <p class="info">
+              We have an ever changing roster of newly chipped celebrities. But it can take as little as a week for the
+              little critters to realise they've been tagged - so you have to be fast!
+            </p>
+            <table class="data" id="celebs">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Name</th>
+                  <th>Occupation</th>
+                  <th>Approx. Location</th>
+                  <th>Price</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>203A</td>
+                  <td>Johny Stardust (<a href="bio.pdf">bio</a>)</td>
+                  <td>Front-man</td>
+                  <td>Los Angeles</td>
+                  <td>$39.95</td>
+                </tr>
+                <tr>
+                  <td>141B</td>
+                  <td>Beau Dandy (<a href="img.jpg">pic</a>,<a href="bio.pdf">bio</a>)</td>
+                  <td>Singer</td>
+                  <td>New York</td>
+                  <td>$39.95</td>
+                </tr>
+                <tr>
+                  <td>2031</td>
+                  <td>Mo' Fat (<a href="img.jpg">pic</a>)</td>
+                  <td>Producer</td>
+                  <td>New York</td>
+                  <td>$19.95</td>
+                </tr>
+                <tr>
+                  <td>007F</td>
+                  <td>Kellie Kelly (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
+                  <td>Singer</td>
+                  <td>Omaha</td>
+                  <td>$11.95</td>
+                </tr>
+                <tr>
+                  <td>8A05</td>
+                  <td>Darth Fader (<a href="img.jpg">pic</a>)</td>
+                  <td>DJ</td>
+                  <td>London</td>
+                  <td>$19.95</td>
+                </tr>
+                <tr>
+                  <td>6636</td>
+                  <td>Glendatronix (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
+                  <td>Keytarist</td>
+                  <td>London</td>
+                  <td>$39.95</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         
       <div class="col-3">
         <img class="circle" src="img/orange-globe.png">
       </div> <!-- end col-3 -->
     </div><!-- end col-11 -->
   </div> <!-- end class row -->
-
+	  
   <div class="row" style="background-color: #1abc9c;">
     <div class="col-10">
       <h2>We're flying around the globe</h2>
@@ -411,6 +464,8 @@
       </div><!-- end col-3 -->
     </div><!-- end col-8 -->
   </div>
+
+	  
   <div class="row" style="background-color: #00afe1;">
     <div class="col-7">
       <h2>So come along for the ride!</h2>
@@ -450,12 +505,8 @@
     </ul>
 
   </div>
-  </div>
-
-  </div><!-- end-wrapper -->
-
-</body>
-
+        </div><!-- end-wrapper -->
+    </body>
 </html>
 
 <!-- View in Browser --       
