--- a/index[1].html
+++ b/index[1].html
@@ -371,46 +371,58 @@
           <h2>So come along for the ride!</h2>
           <div class="col-3">
             <img id="globe" class="circle" src="images/globe.png" width="215px">
-      <div class="row">
-        <div class="col-12" style="background-color: 66d4ff;">
-          <img id="plane-background" src="./img/plane-background.png" width="935px">
-        </div> 
-      </div>
-      
-      <div class="row" style="background-color: 66d4ff">
-        <div class="col-12">
-          <h2>Follow Us</h2>
+          </div>
         </div>
-        <div id="comment">
-          <h2>Leave a comment</h2>
-          name:<br />
-          <input type="text" /><br />
-          comment:<br />
-          <textarea rows="5" cols="30" name="comment"></textarea>
-        </div>
-      </div>
+      </div> 
+            <div class="row" style="background-color: 66d4ff;">
+              <div class="col-12">
+                <img id="plane-background" src="./img/plane-background.png" width="935px">
+              </div>
+            </div>
 
-      <div class="row" style="background-color: 66d4ff">
-        <div class="col-12">
+            <div class="row" style="background-color: 66d4ff">
+              <div class="col-12">
+                <h2>Follow Us</h2>
+              </div>
+              <div id="comment">
+                <h2>Leave a comment</h2>
+                name:<br>
+                <input type="text"><br >
+                comment:<br>
+                <textarea rows="5" cols="30" name="comment"></textarea>
+              </div>
+            </div>
+
+            <div class="row" style="background-color: 66d4ff">
+              <div class="col-12">
+                <h2>Fine Print</h2>
+                <p id="fine_print">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                  officia deserunt mollit anim id est laborum.
+                </p>
+              </div>
+            </div>
+          </div>
           <div id="footer">
-            <p>
+            
+          <ul class="social">
+            <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
+            <li><a href="#"><i class="fa fa-google-plus"></i></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter"></i></i></a></li>
+            <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
+            <li><a href="#"><i class="instagram"></i></i></a></li>
+          </ul>
+          <p>
               &copy; Copyright 2010 CelebriTracker Productions
             </p>
           </div>
+
         </div>
-
-        <ul class="social">
-          <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
-          <li><a href="#"><i class="fa fa-google-plus"></i></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></i></a></li>
-          <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
-          <li><a href="#"><i class="instagram"></i></i></a></li>
-        </ul>
-
-      </div>
-    </div><!-- end-wrapper -->
+      </div><!-- end-wrapper -->
 </body>
-
 </html>
 
 <!-- View in Browser --       
