--- a/index[1].html
+++ b/index[1].html
@@ -13,6 +13,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8" />
+  
+  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="script.js"></script>
+  <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./scripts.js"></script>
   <link rel="stylesheet" href="./style[1].css">
