--- a/index[1].html
+++ b/index[1].html
@@ -50,8 +50,7 @@
   <link rel="stylesheet" href="./font-awesome.min.css">
 
   <link rel="stylesheet" href="../orris0/CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
-  <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css"
-    media="screen" charset="utf-8">
+  <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css" media="screen" charset="utf-8">
 
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
