--- a/index[1].html
+++ b/index[1].html
@@ -220,25 +220,24 @@
       <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
         <div class="çol-12">
           <img src="img/paper.png";>
-          <div id="navigation">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Buy Now!</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Gift Ideas</a></li>
-        </ul>
-      </div>
-
           <p id="intro">
           Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come
             to
             the right place. We have a very special special on B-grade celebs this week, so hurry in!
           </p>
         </div><!-- end-col-12 -->
+        
+        <div id="navigation">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Buy Now!</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Gift Ideas</a></li>
+          </ul>
+        </div>
+      </div>
 
-      </div><!-- end-row -->
-
-      <div class="row" style="background-color: #f6931e;">
+      <div class="row" style="background-color: #F6931E;">
         <div class="col-11">
           <h2>Get ready for take off.</h2>
           <p id="no-script">
@@ -247,7 +246,7 @@
         </div><!-- end col-11 -->
       </div> <!-- end class row -->
 
-      <div class="row" style="background-color: #1abc9c;">
+      <div class="row" style="background-color: #F6931E;">
         <div class="col-11">
           <p id="disclaimer">
             Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like
@@ -389,13 +388,13 @@
           </div>
         </div>
       </div>
-      <div class="row" style="background-color: 66d4ff;">
+      <div class="row" style="background-color: #00AFE1;">
         <div class="col-12">
           <img id="plane-background" src="./img/plane-background.png" width="935px">
         </div>
       </div>
 
-      <div class="row" style="background-color: 66d4ff">
+      <div class="row" style="background-color: #66d4ff">
         <div class="col-12">
           <h2>Follow Us</h2>
         </div>
