--- a/index[1].html
+++ b/index[1].html
@@ -243,9 +243,8 @@
 
           <div class="row" style="background-color: #F6931E;">
               <div class="col-11">
-                  <p id="disclaimer">
-                      Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like
-                      people so their privacy should be respected.
+                  <p id="no-script">
+                      We recommend that you have JavaScript enabled!
                   </p>
               </div><!-- end col-11 -->
               <div class="col-3">
