--- a/index[1].html
+++ b/index[1].html
@@ -113,26 +113,25 @@
   <meta property="og:image" content="image.png">
   <meta name="keywords" content="HTML5, Node.js, Jquery">
   <meta name="author" content="Ian Andolina">
-  <!-- Optional Metadata-->
+  <!-- Optional Metadata--
   <meta property="og:audio" content="https://orris0.github.io/sound.mp3">
   <meta property="og:audio:secure_url" content="https://secure.orris0.github.io/sound.mp3">
   <meta property="og:audio:type" content="audio/mpeg">
   <meta property="og:audio" content="https://orris0.github.io/bond/theme.mp3">
-  <meta property="og:description"
-    content="Orris Baker found assaulted and mistreated at the BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
+  <meta property="og:description" content="Orris Baker found assaulted and mistreated at the BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
   <meta property="og:determiner" content="the">
   <meta property="og:locale" content="en_GB">
   <meta property="og:locale:alternate" content="fr_FR">
   <meta property="og:locale:alternate" content="es_ES">
   <meta property="og:site_name" content="IMDb">
-  <!--og: video example:-->
+  <!--og: video example:--
   <meta property="og:video" content="https://orris0.github.io/bond/trailer.swf">
   <meta property="og:video" content="https://orris0.github.io/movie.swf">
   <meta property="og:video:secure_url" content="https://secure.example.com/movie.swf">
   <meta property="og:video:type" content="application/x-shockwave-flash">
   <meta property="og:video:width" content="400">
   <meta property="og:video:height" content="300">
-  <!-- A full image example:-->
+  <!-- A full image example:--
   <meta property="og:image" content="https://orris0.github.io/ogp.jpg">
   <meta property="og:image:secure_url" content="https://secure.orris0.github.io/ogp.jpg">
   <meta property="og:image:type" content="image/jpeg">
@@ -148,7 +147,7 @@
   <link rel="icon" href="./favicon.ico" sizes="any">
   <link rel="icon" href="./icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="./icon.png">
-  <!-- Google Fonts -->
+  <!-- Google Fonts --
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
     rel='stylesheet' type='text/css'>
