--- a/index[1].html
+++ b/index[1].html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
   <link rel="stylesheet" href="./lightbox.css" type="text/css" media="screen" charset="utf-8" />
-  
+  <!-- 01_lightbox -->
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="script.js"></script>
   
@@ -443,6 +443,10 @@
       </div>
     </div> <!-- end-wrapper-->
   </div><!-- end-container -->
+
+  <!-- 01_lightbox -->
+  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="./js/scripts.js"></script>
 
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="../orris0/aos.css"></script>
