--- a/index[1].html
+++ b/index[1].html
@@ -450,13 +450,10 @@
 
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     
-    <script src="../orris0/bootstrap.bundle.min.js"></script>
-    <script src="../orris0/glightbox.min.js"></script>
-    <script src="../orris0/isotope.pkgd.min.js"></script>
-    <script src="../orris0/swiper-bundle.min.js"></script>
-    <script src="../orris0/validate.js"></script>
+    <script src="./js/bootstrap.bundle.js.map"></script>
+    
     <!--jQuery JS-->
-    <script type="text/javascript" src="js/jquery-1.7.js"></script>
+    <script type="text/javascript" src="./js/jquery-1.7.js"></script>
     <script type="text/javascript" src="../orris0/js/script.js"></script>
      <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./scripts.js"></script>
