--- a/index[1].html
+++ b/index[1].html
@@ -15,10 +15,10 @@
   <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8" />
   <!-- 01_lightbox -->
 
-  <link rel="stylesheet" href="./css/base.css" type="text/css" media="screen" charset="utf-8"/>	
-  <link rel="stylesheet" href="../../orris0/orris0/CSS/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
+  <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8"/>	
+  <link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
 	<!-- 02_colorbox -->
-  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="../orris0/js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="../orris0/js/scripts.js"></script>
   
