--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 <div class="wrapper">
 	<a href="../../images/johnny_400.jpg" class="lightbox">pic</a>
-	<div class="row" id="header">
+	<header class="data" class="row" id="html5style2header">
 		<div class="col-12">
 			<img class="logo" src="img/flexy-logo.png">
 		</div><!-- end-col-12 --
@@ -179,7 +179,6 @@
             <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
         </div>
         <br class="clear">
-    </div><!--content section closed--
 
 	<div class="row">
 		<div class="col-12">
@@ -277,6 +276,7 @@
             <h2>Follow Us</h2>
         </div>
 	</div>
+	</div><!--content section closed--
 	<div class="row" style="background-color: 66d4ff">
 		<div class="col-12">
 			
