--- a/index[1].html
+++ b/index[1].html
@@ -461,6 +461,16 @@
     </div> <!-- end-wrapper-->
   </div><!-- end-container -->
 
+  <!-- document ready -->
+  <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="script.js"></script>
+
+  <!-- selecting -->
+  <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />  
+  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="script.js"></script>
+	
   <!-- 01_lightbox -->
   <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./js/script.js"></script>
@@ -473,6 +483,11 @@
     <!--jQuery JS-->
 	<!-- document ready -->
   <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="script.js"></script>
+
+  <!-- selecting -->
+  <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />  
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="script.js"></script>
 
